--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
     "start:dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",  
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0"
